[package]
name = "rustpotter"
version = "2.0.0"
edition = "2021"

[dependencies]
ciborium = "0.2.0"
hound = "3.4.0"
rubato = { version = "0.12.0", default-features = false }
rustfft = { version = "6.1.0", default-features = false }
serde =  { version = "1.0.152", features = ["derive"] }
simple-matrix = { version = "0.1.2", default-features = false }
