[package]
name = "rustpotter"
version = "3.0.0-beta.5"
edition = "2021"
license = "Apache-2.0"
description = "An open source wakeword spotter forged in rust."
authors = ["Miguel Álvarez Díez <miguelwork92@gmail.com>"]
repository = "https://github.com/GiviMAD/rustpotter"
exclude = [
    ".vscode/*",
    "tests/*",
    "tools/*",
    "square-icon.png",
]

[dependencies]
candle-core = "0.2.0"
candle-nn = "0.2.0"
ciborium = "0.2.0"
hound = "3.4.0"
rubato = { version = "0.14.1", default-features = false }
rustfft = { version = "6.1.0", default-features = false }
serde =  { version = "1.0.188", features = ["derive"], default-features = false }

[features]
default = ["debug"]
debug = []
audio = []
record = []

